--- a/worksheet6/mainwindow.ui
+++ b/worksheet6/mainwindow.ui
@@ -25,6 +25,9 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="contextMenuPolicy">
+         <enum>Qt::ContextMenuPolicy::ActionsContextMenu</enum>
+        </property>
        </widget>
       </item>
       <item>
