--- a/worksheet6/mainwindow.ui
+++ b/worksheet6/mainwindow.ui
@@ -20,7 +20,7 @@
       <item>
        <widget class="QTreeView" name="treeView">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
+         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
@@ -67,7 +67,7 @@
       <item>
        <widget class="QPushButton" name="pushButton_2">
         <property name="text">
-         <string>PushButton2</string>
+         <string>Save</string>
         </property>
        </widget>
       </item>
